@@ -1,8 +1,10 @@
 import { Arr, Obj } from '@ephox/katamari';
-import { Attribute, Css, Insert, Remove, Selectors, SugarElement } from '@ephox/sugar';
+import { Attribute, Insert, Remove, Replication, Selectors, SugarElement, Width } from '@ephox/sugar';
 import * as DetailsList from '../model/DetailsList';
+import * as ColUtils from '../util/ColUtils';
 import * as LayerSelector from '../util/LayerSelector';
 import { DetailExt, RowData } from './Structs';
+import { TableSize } from './TableSize';
 import { Warehouse } from './Warehouse';
 
 interface StatsStruct {
@@ -10,13 +12,17 @@ interface StatsStruct {
   readonly minCol: number;
   readonly maxRow: number;
   readonly maxCol: number;
+  readonly allCells: DetailExt[];
+  readonly selectedCells: DetailExt[];
 }
 
-const statsStruct = (minRow: number, minCol: number, maxRow: number, maxCol: number): StatsStruct => ({
+const statsStruct = (minRow: number, minCol: number, maxRow: number, maxCol: number, allCells: DetailExt[], selectedCells: DetailExt[]): StatsStruct => ({
   minRow,
   minCol,
   maxRow,
-  maxCol
+  maxCol,
+  allCells,
+  selectedCells,
 });
 
 const findSelectedStats = (house: Warehouse, isSelected: (detail: DetailExt) => boolean): StatsStruct => {
@@ -28,8 +34,12 @@ const findSelectedStats = (house: Warehouse, isSelected: (detail: DetailExt) => 
   let minCol = totalColumns;
   let maxRow = 0;
   let maxCol = 0;
+  const allCells: DetailExt[] = [];
+  const selectedCells: DetailExt[] = [];
   Obj.each(house.access, (detail) => {
+    allCells.push(detail);
     if (isSelected(detail)) {
+      selectedCells.push(detail);
       const startRow = detail.row;
       const endRow = startRow + detail.rowspan - 1;
       const startCol = detail.column;
@@ -47,7 +57,7 @@ const findSelectedStats = (house: Warehouse, isSelected: (detail: DetailExt) => 
       }
     }
   });
-  return statsStruct(minRow, minCol, maxRow, maxCol);
+  return statsStruct(minRow, minCol, maxRow, maxCol, allCells, selectedCells);
 };
 
 const makeCell = <T>(list: RowData<T>[], seenSelected: boolean, rowIndex: number): void => {
@@ -79,9 +89,9 @@ const fillInGaps = <T>(list: RowData<T>[], house: Warehouse, stats: StatsStruct,
   }
 };
 
-const clean = (table: SugarElement, stats: StatsStruct): void => {
+const clean = (replica: SugarElement<HTMLTableElement>, stats: StatsStruct, widthDelta: number): void => {
   // can't use :empty selector as that will not include TRs made up of whitespace
-  const emptyRows = Arr.filter(LayerSelector.firstLayer(table, 'tr'), (row) =>
+  const emptyRows = Arr.filter(LayerSelector.firstLayer(replica, 'tr'), (row) =>
     // there is no sugar method for this, and Traverse.children() does too much processing
     (row.dom as HTMLElement).childElementCount === 0
   );
@@ -89,36 +99,68 @@ const clean = (table: SugarElement, stats: StatsStruct): void => {
 
   // If there is only one column, or only one row, delete all the colspan/rowspan
   if (stats.minCol === stats.maxCol || stats.minRow === stats.maxRow) {
-    Arr.each(LayerSelector.firstLayer(table, 'th,td'), (cell) => {
+    Arr.each(LayerSelector.firstLayer(replica, 'th,td'), (cell) => {
       Attribute.remove(cell, 'rowspan');
       Attribute.remove(cell, 'colspan');
     });
   }
 
-  Attribute.remove(table, 'width');
-  Attribute.remove(table, 'height');
-  Css.remove(table, 'width');
-  Css.remove(table, 'height');
+  const replicaTableSize = TableSize.getTableSize(replica);
+  replicaTableSize.adjustTableWidth(widthDelta);
+};
+
+const getTableWidthDelta = (tableSize: TableSize, stats: StatsStruct): number => {
+  /*
+    Calculate new width by comparing width of selected columns to
+    width of all columns, which is the ratio to apply to the full table width.
+
+    We have to do this due to padding/margin etc.
+    (e.g. a 1000px wide table might have 3 x 320px wide columns)
+
+    Note: We will be off by a few pixels due to borders
+  */
+  const getColsWidth = (cols: DetailExt[]) => {
+    return cols.reduce((acc, col) => {
+      return acc + Width.getOuter(col.element);
+    }, 0);
+  };
+
+  const uniqueCols = ColUtils.uniqueColumns(stats.allCells);
+  const uniqueSelectedCols = ColUtils.uniqueColumns(stats.selectedCells);
+
+  // short circuit entire table selected
+  if (uniqueSelectedCols.length === uniqueCols.length) {
+    return 0;
+  }
+
+  const allColsWidth = getColsWidth(uniqueCols);
+  const selectedColsWidth = getColsWidth(uniqueSelectedCols);
+
+  const newWidth = (selectedColsWidth / allColsWidth) * tableSize.pixelWidth();
+  const delta = newWidth - tableSize.pixelWidth();
+  return tableSize.getCellDelta(delta);
 };
 
 const extract = (table: SugarElement, selectedSelector: string): SugarElement => {
   const isSelected = (detail: DetailExt) => Selectors.is(detail.element, selectedSelector);
 
-  const list = DetailsList.fromTable(table);
+  const replica = Replication.deep(table);
+  const list = DetailsList.fromTable(replica);
   const house = Warehouse.generate(list);
-
+  const tableSize = TableSize.getTableSize(table);
   const stats = findSelectedStats(house, isSelected);
 
   // remove unselected cells
   const selector = 'th:not(' + selectedSelector + ')' + ',td:not(' + selectedSelector + ')';
-  const unselectedCells = LayerSelector.filterFirstLayer(table, 'th,td', (cell) => Selectors.is(cell, selector));
+  const unselectedCells = LayerSelector.filterFirstLayer(replica, 'th,td', (cell) => Selectors.is(cell, selector));
   Arr.each(unselectedCells, Remove.remove);
 
   fillInGaps(list, house, stats, isSelected);
 
-  clean(table, stats);
+  const widthDelta = getTableWidthDelta(tableSize, stats);
+  clean(replica, stats, widthDelta);
 
-  return table;
+  return replica;
 };
 
 export {
